# steam_screenshot_manager

./: .copier-answers.yml  .gitignore  .markdownlint.yaml  .taplo.toml  README.md  prek.toml  pyproject.toml  pyrightconfig.json  replacements.yml  requirements.txt  steam_screenshot_manager.py
src/steam_screenshot_manager/: main.py
test/: test_get_name.py  test_main.py  test_move_screenshots.py
